<resources>
    <string name="app_name">Ubi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameAndPassword">Login and Password</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="change_password">change password</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="add_employee_payment">Add employee\'s payment</string>
    <string name="Employee_payment">Employee ayment</string>
    <string name="Company_payment">Company payment</string>
    <string name="date">Date</string>
    <string name="unit_value">Unit value</string>
    <string name="randomValue">59,23</string>
    <string name="Add_payment">Add payment</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="amount">Amount</string>
    <string name="ext_inf">Additional Information</string>
    <string name="ext_emp_per">Additional Employee Percent</string>
    <string name="decimal">12,34</string>
    <string name="percentage">Extra in %</string>
    <string name="company_name">Company Name: </string>
    <string name="ext_comp_per">Additional Company Percentages</string>
    <string name="next">Next</string>
    <string name="ppk">PPK</string>
    <string name="choose">Choose</string>
    <string name="ppkName">PPK Name: </string>
    <string name="stateOfFunds">STATE OF FUNDS</string>
    <string name="payment">Payment</string>
    <string name="ownPayment">Own Payments</string>
    <string name="empPayment">Employer\'s Payments</string>
    <string name="countryPayment">State\'s Payments</string>
    <string name="inflation">With Inflation</string>
    <string name="totalFundValue">Total FundsValue</string>
    <string name="clickToAddPayment">Click to add payment</string>
    <string name="add_country_payment">Add state payment</string>
    <string name="Home">Home</string>
    <string name="profile">Profile</string>
    <string name="extUserPer">Extra user\'s percentage: </string>
    <string name="extCompPer">Extra company\'s percentage: </string>
    <string name="export_data">EXPORT DATA</string>
    <string name="import_data">IMPORT DATA</string>
    <string name="logout">LOGOUT</string>
    <string name="zero">0.0</string>
    <string name="needInternet">REQUIRE INTERNET CONNECTION</string>
    <string name="ppkAmount">PPK Amount</string>
    <string name="paymentHistory">PAYMENT HISTORY</string>
</resources>