<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.countryPayment.countryPaymentFragment">

    <TextView
        android:id="@+id/addCountryPaymentTextView"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_country_payment"
        app:layout_constraintBottom_toTopOf="@id/countryPaymentTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="100dp"
        />


    <TextView
        android:id="@+id/countryPaymentTextView"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countryPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCountryPaymentTextView"
        app:layout_constraintBottom_toTopOf="@+id/countryPaymentTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryPaymentTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryPaymentTextView"
        app:layout_constraintBottom_toTopOf="@id/dateCountryPaymentTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintVertical_chainStyle="packed"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/countryPaymentTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:hint="@string/amount"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dateCountryPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryPaymentTextInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/dateCountryPaymentInputLayout"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateCountryPaymentInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/dateCountryPaymentTextView"
        app:layout_constraintBottom_toTopOf="@id/unitValueTextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/unitValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/unit_value"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateCountryPaymentInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/unitValueTextInputLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unitValueTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitValueTextView"
        app:layout_constraintBottom_toTopOf="@+id/addPaymentButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <TextView
            android:id="@+id/unitValuetTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/randomValue"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addPaymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Add_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitValueTextInputLayout"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="30dp"
        app:strokeColor="@color/navy"
        />

</androidx.constraintlayout.widget.ConstraintLayout>