<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.homeScreen.HomeScreenFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/ppkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ppkName"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/payments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ppkName"
            android:orientation="vertical">
            <TextView
                android:id="@+id/stateOfFunds"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stateOfFunds"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/TotalFunds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/totalFundValue"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textSize="20sp"
                    android:layout_margin="5dp">
                </TextView>

                <TextView
                    android:id="@+id/paymentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/payment"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/ownPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ownPayment"
                    android:textSize="20sp"
                    android:layout_margin="5dp">
                </TextView>

                <TextView
                    android:id="@+id/ownPaymentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ownPayment"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/empPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empPayment"
                    android:textSize="20sp"
                    android:layout_margin="5dp">
                </TextView>

                <TextView
                    android:id="@+id/empPaymentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ownPayment"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/countryPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/countryPayment"
                    android:textSize="20sp"
                    android:layout_margin="5dp">
                </TextView>

                <TextView
                    android:id="@+id/countryPaymentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ownPayment"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/inflation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inflation"
                    android:textSize="20sp"
                    android:layout_margin="5dp">
                </TextView>

                <TextView
                    android:id="@+id/inflationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ownPayment"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addPaymentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clickToAddPayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:useCompatPadding="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>